# trading_agents

./: .env.example  .pylintrc  export_env.sh  main.py  pyproject.toml  test_all_teams.py  test_analytics_team.py  test_bear_research.py  test_bull_research.py  test_complete_team.py  test_complete_workflow.py  test_decision_team.py  test_decision_with_reports.py  test_fundamentals.py  test_market.py  test_news.py  test_research_team.py  test_social.py  test_trader.py
src/agents/agent/: agent_like.py
src/agents/analytics/fundamentals_analyst/: fundamental_deepseek_factory.py  fundamentals_analyst.py  fundamentals_tools.py
src/agents/analytics/market_analyst/: market_analyst.py  market_deepseek_factory.py
src/agents/analytics/news_analyst/: news_analyst.py  news_deepseek_factory.py  news_tools.py
src/agents/analytics/social_media_analyst/: social_deepseek_factory.py  social_media_analyst.py  social_media_tools.py
src/agents/research/bear_research/: __init__.py  bear_deepseek_factory.py  bear_research.py  bear_research_tools.py
src/agents/research/bull_research/: __init__.py  bull_deepseek_factory.py  bull_research.py
src/agents/trader/: trader.py  trader_deepseek_factory.py  trader_tools.py
src/teams/: __init__.py  complete_team.py  decision_team.py
src/teams/analytics/: __init__.py  analytics_team.py
src/teams/research/: __init__.py  research_team.py
src/teams/trader/: trading_team.py
