[project]
name = "trading-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.8",
    "exa-py>=1.14.20",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
    "openai>=1.99.1",
    "praw>=7.8.1",
    "pytest>=8.4.1",
    "tweepy>=4.16.0",
    "yfinance>=0.2.65",
]
